Mainly it is about the complicated pageNodes operations like delete or update